# mpd_rest_interface

./: Cargo.toml  README.md
src/: main.rs
src/servers/: api_server.rs  mod.rs  rest_server.rs
src/util/: files.rs  mod.rs  mpd.rs
