[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.4"
lofty = "0.22.4"
mpd = {version = "0.1.0", features = ["serde"]}
serde = {version = "1.0.219", features = ["derive"]}
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = {version = "0.6.6", features = ["cors"]}
